--- a/css/styles.css
+++ b/css/styles.css
@@ -22,4 +22,81 @@ body {
     font-weight: 400;
     line-height: 1.5;
 }
+a {
+    text-decoration: none;
+}
+ul {
+    list-style-type: none;
+}
+p {
+    line-height: 1.7;
+    color: var(--text-clr);
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 400;
+    color: var(--secondary-clr);
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+.container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media screen and (min-width: 576px) {
+    .container {
+        width: 540px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .container {
+        width: 720px;
+    }
+}
+@media screen and (min-width: 992px) {
+    .container {
+        width: 960px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1140px;
+    }
+}
+.btn {
+    width: 150px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--secondary-clr);
+    font-weight: 500;
+    color: var(--white-clr);
+    cursor: pointer;
+}
+.btn:hover {
+    background-color: var(--primary-clr);
+    box-shadow: 0 .3rem .5rem rgb(51 51 51 / 30%);
+}
+.heading {
+    position: relative;
+    text-align: center;
+    font-size: 2rem;
+    letter-spacing: 1px;
+    margin-bottom: 4rem;
+}
+.heading::after {
+    content: "";
+    position: absolute;
+    bottom: -.2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 3.5rem;
+    height: .2rem;
+    background-color: var(--secondary-clr);
+}
 /* basic rules ends */
