--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
     color: var(--white-clr);
 }
 body {
+    height: 10000px;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
@@ -100,3 +101,72 @@ img {
     background-color: var(--secondary-clr);
 }
 /* basic rules ends */
+/* header section starts */
+.header {
+    padding: .75rem 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    background-color: var(--white-clr);
+    box-shadow: 0 .3rem .5rem rgb(51 51 51 / 30%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.brand {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+    color: var(--secondary-clr);
+}
+#nav-input {
+    display: none;
+}
+.navbar a {
+    display: inline-block;
+    padding: 0 15px;
+    color: var(--secondary-clr);
+}
+.navbar a:hover {
+    color: var(--primary-clr);
+}
+.nav-btn {
+    display: none;
+}
+@media screen and (max-width: 767px) {
+    .nav-btn {
+        display: block;
+        font-size: 1.5rem;
+        color: var(--secondary-clr);
+        cursor: pointer;
+    }
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 9999;
+        background-color: var(--white-clr);
+        border-top: 1px solid transparent;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transform: translateY(-50rem);
+    }
+    .navbar a {
+        text-align: center;
+        display: block;
+        font-size: 1.25rem;
+        padding: 10px 0;
+    }
+    #nav-input:checked + .navbar {
+        opacity: 1;
+        transform: translateY(0);
+        border-color: var(--secondary-clr);
+    }
+}
+/* header section ends */
