--- a/css/styles.css
+++ b/css/styles.css
@@ -384,3 +384,44 @@ img {
     margin-bottom: .25rem;
 }
 /* end section starts */
+/* portfolio section starts */
+.portfolio {
+    padding: 2.5rem 0 0;
+}
+.portfolio input {
+    display: none;
+}
+.gallery-controls {
+    margin-bottom: calc(4rem - 15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.gallery-controls label {
+    margin: 0 15px 15px;
+}
+#cntrl-1:checked ~ .gallery-controls label[for="cntrl-1"],
+#cntrl-2:checked ~ .gallery-controls label[for="cntrl-2"],
+#cntrl-3:checked ~ .gallery-controls label[for="cntrl-3"],
+#cntrl-4:checked ~ .gallery-controls label[for="cntrl-4"] {
+    background-color: var(--primary-clr);
+    box-shadow: 0 .3rem .5rem rgb(51 51 51 / 30%);
+}
+.gallery-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    grid-gap: 1.5rem;
+}
+.gallery-img {
+    width: 100%;
+    height: 13rem;
+    display: none;
+}
+#cntrl-1:checked ~ .gallery-container img,
+#cntrl-2:checked ~ .gallery-container img[data-value="desing"],
+#cntrl-3:checked ~ .gallery-container img[data-value="graphic"],
+#cntrl-4:checked ~ .gallery-container img[data-value="code"] {
+    display: block;
+}
+/* portfolio section ends */
