--- a/css/styles.css
+++ b/css/styles.css
@@ -425,3 +425,81 @@ img {
     display: block;
 }
 /* portfolio section ends */
+/* contact section starts */
+.contact {
+    padding: 5rem 0;
+}
+.contact-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+@media screen and (max-width: 768px) {
+    .contact .row {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+.contact-info {
+    flex: 0 0 33.3333337%;
+    max-width: 33.3333337%;
+}
+@media screen and (max-width: 768px) {
+    .contact-info {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+.info-box {
+    margin: 2rem 0;
+}
+.info-box h3 {
+    font-size: 1.25rem;
+    color: var(--primary-clr);
+}
+.info-box h3 i {
+    margin-right: .25rem;
+}
+.info-box p {
+    color: var(--secondary-clr);
+    padding-left: 1.5rem;
+}
+.contact-form {
+    flex: 0 0 66.6666667%;
+    max-width: 66.6666667%;
+}
+@media screen and (max-width: 768px) {
+    .contact-form {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+.contact-form .input-box {
+    margin: 0 -1%;
+}
+.contact-form .input-box input {
+    display: inline-block;
+    width: 47%;
+    margin: 0 1% 1.5rem;
+}
+@media screen and (max-width: 768px) {
+    .contact-form .input-box input {
+        display: block;
+        width: 100%;
+        margin: 0 0 1.5rem 0;
+    }
+}
+.contact-form input,
+.contact-form textarea {
+    display: block;
+    margin-bottom: 1.5rem;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    font-size: 1.05rem;
+}
+.contact-form textarea {
+    height: 150px;
+    resize: none;
+}
+/* contact section ends */
