--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 /* basic rules starts */
+html {
+    -webkit-scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    -webkit-scroll-padding-top: 3.5rem;
+    scroll-padding-top: 3.5rem;
+}
 * {
     margin: 0;
     padding: 0;
@@ -175,8 +181,8 @@ img {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    /* background: url(../img/pic-bg.png) center center no-repeat; */
-    background-color: #eee;
+    background: url(../img/pic-bg.png) center center no-repeat;
+    /* background-color: #eee; */
     background-size: cover;
     background-attachment: fixed;
 }
